Working Modular Architecture
✅ Clean file structure:
- APIService: Centralized API communication
- UIUtils: Common utility functions
- ModalManager: Modal operations
- ProgramManager: Program & module logic
- EmployeeManager: Employee & assignment logic
- Main renderer: Clean orchestrator

🎯 Ready for Phase 4 advanced features!

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -560,6 +560,12 @@
         <div class="loading-spinner"></div>
     </div>
 
+    <!-- Load modules in dependency order -->
+    <script src="js/services/APIService.js"></script>
+    <script src="js/components/UIUtils.js"></script>
+    <script src="js/components/ModalManager.js"></script>
+    <script src="js/modules/ProgramManager.js"></script>
+    <script src="js/modules/EmployeeManager.js"></script>
     <script src="js/renderer.js"></script>
 </body>
 </html>
